--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,18 @@
+<!-- public/index.html -->
 <!DOCTYPE html>
 <html lang="uk">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/images/MainLogo.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/MainLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="НМТ Експрес 2025 - симулятор тестів з історії" />
-    <title>НМТ Експрес 2025</title>
+    <meta name="theme-color" content="#14b8a6" />
+    <meta name="description" content="НМТ Експрес 2025 - симулятор тестів з історії України" />
+    <title>НМТ Експрес 2025 | Історія України</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Для роботи додатку потрібен JavaScript</noscript>
     <div id="root"></div>
   </body>
 </html>
