--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,18 @@
 <html lang="uk">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/images/MainLogo.png" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/MainLogo.png" />
+    <!-- Favicon -->
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" sizes="any" />
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#14b8a6" />
+    <meta name="description" content="НМТ Експрес 2025 - симулятор тестів з історії України" />
+    <title>🎓 НМТ Експрес 2025 | Історія України</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#14b8a6" />
     <meta name="description" content="НМТ Експрес 2025 - симулятор тестів з історії України" />
