--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#14b8a6" />
     <meta name="description" content="НМТ Експрес 2025 - симулятор тестів з історії України" />
-    <title> 🎓 НМТ Експрес 2025 | Історія України</title>
+    <title> 🎓 НМТ | Історія України. Historic_up </title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
